--- a/src/main/resources/templates/doctor.html
+++ b/src/main/resources/templates/doctor.html
@@ -6,11 +6,14 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<header>Header TODO</header>
+<header th:replace="header.html :: top">
+</header>
 <section>
-    <h1>Welcome $doctorname</h1>
-    <h3>Your number is $doctornumber</h3>
+    <h1 th:text="|Welcome ${doctorname}!|"> Welcome $doctorname</h1>
+    <h3 th:text="|Your number is ${doctornumber}!|"> Welcome $doctornumber</h3>
+    <li><a href="/">Home<a></l>
 </section>
-<footer>Footer TODO</footer>
+<footer th:replace="footer.html :: bottom">>
+</footer>
 </body>
 </html>
